<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center_horizontal">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:background="@color/aqua"
            android:text="@string/calculate_your_age"
            android:textColor="@color/white"
            android:gravity="start|bottom"
            android:fontFamily="sans-serif"
            android:textSize="30sp"
            android:textStyle="bold"
            android:padding="20dp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:background="@color/aqua"
            android:text="@string/selection_date_calender"
            android:textColor="@color/white"
            android:gravity="start|top"
            android:textSize="20sp"
            android:textStyle="normal"
            android:paddingStart="20dp"
            android:paddingEnd="15dp"
            />

        <Button
            android:id="@+id/btnDatesPicker"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/calcuate_age"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:layout_marginLeft="40dp"
            android:layout_marginRight="40dp"
            android:padding="10dp"
            android:textStyle="bold"
            android:layout_marginTop="10dp"
            android:backgroundTint="@color/black"
            android:background="@drawable/mybutsmargin"
            android:textAllCaps="false"
            />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:text="@string/selected_birthday"
            android:textColor="@color/grey"
            android:gravity="start|bottom"
            android:textSize="18sp"
            android:textStyle="normal"
            android:paddingStart="20dp"
            android:paddingEnd="20dp"
            />

        <TextView
            android:id="@+id/selectedBirthday"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:text="@string/_02_04_1996"
            android:textColor="@color/black"
            android:gravity="top"
            android:textSize="23sp"
            android:textStyle="bold"
            android:paddingStart="20dp"
            android:paddingEnd="20dp"
            android:paddingTop="5dp"
            />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:textColor="@color/grey"
            android:textStyle="normal"
            android:background="@color/grey"
            android:layout_marginStart="26dp"
            android:layout_marginEnd="40dp"
            />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:text="@string/total_minutes"
            android:textColor="@color/grey"
            android:gravity="start|bottom"
            android:textSize="18sp"
            android:textStyle="normal"
            android:paddingStart="20dp"
            android:paddingEnd="20dp"
            />

        <TextView
            android:id="@+id/datesInMinutes"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:text="@string/_1440"
            android:textColor="@color/black"
            android:gravity="top"
            android:textSize="23sp"
            android:textStyle="bold"
            android:paddingStart="20dp"
            android:paddingEnd="20dp"
            android:paddingTop="5dp"
            />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:textColor="@color/grey"
            android:textStyle="normal"
            android:background="@color/grey"
            android:layout_marginStart="26dp"
            android:layout_marginEnd="40dp"
            />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:text="@string/total_hours"
            android:textColor="@color/grey"
            android:gravity="start|bottom"
            android:textSize="18sp"
            android:textStyle="normal"
            android:paddingStart="20dp"
            android:paddingEnd="20dp"
            />

        <TextView
            android:id="@+id/datesInHour"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:text="@string/_200_000"
            android:textColor="@color/black"
            android:gravity="top"
            android:textSize="23sp"
            android:textStyle="bold"
            android:paddingStart="20dp"
            android:paddingEnd="20dp"
            android:paddingTop="5dp"
            />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:textColor="@color/grey"
            android:textStyle="normal"
            android:background="@color/grey"
            android:layout_marginStart="26dp"
            android:layout_marginEnd="40dp"
            />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:text="@string/total_days"
            android:textColor="@color/grey"
            android:gravity="start|bottom"
            android:textSize="18sp"
            android:textStyle="normal"
            android:paddingStart="20dp"
            android:paddingEnd="20dp"
            />

        <TextView
            android:id="@+id/daysInDays"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:text="@string/_1_000"
            android:textColor="@color/black"
            android:gravity="top"
            android:textSize="23sp"
            android:textStyle="bold"
            android:paddingStart="20dp"
            android:paddingEnd="20dp"
            android:paddingTop="5dp"
            />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:textColor="@color/grey"
            android:textStyle="normal"
            android:background="@color/grey"
            android:layout_marginStart="26dp"
            android:layout_marginEnd="40dp"
            />


    </LinearLayout>

</ScrollView>